--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "date-fns": "^2.29.1",
+    "mapbox-gl": "^2.10.0",
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
